# cb-rust-demo

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.nobuild  README.md  config.example.toml  config.test.toml  docker-compose.yml
.github/workflows/: rust-cached.yml  rust.yml
migrations/: 0001_init.sql
openapi/: openapi.json
src/: configuration.rs  db.rs  error.rs  hours.rs  lib.rs  main.rs  test_utils.rs
src/hours/: mod.rs  model.rs
tests/: health_check.rs  hours.rs
