[package]
name = "cb-rust-demo"
version = "0.1.0"
edition = "2018"
authors = ["Kaarel Ratas", "Ilja Tolliu"]
repository = "https://github.com/kendas/cb-rust-demo/"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
